feat.(mailer): Mailer service initialization

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       - .env
     depends_on:
       - rabbitmq
+      - mailer
       - auth
     volumes:
       - .:/usr/src/app # any change to base folder should be reflected
@@ -54,8 +55,23 @@ services:
       - .env
     depends_on:
       - rabbitmq
+      - mailer
       # - postgres
     volumes:
       - .:/usr/src/app # any change to base folder should be reflected
       - /usr/src/app/node_modules
     command: npm run start:dev auth # overrides CMD from dockerfile
+    
+  mailer:
+    build:
+      context: ./
+      dockerfile: ./apps/mailer/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - rabbitmq
+      # - postgres
+    volumes:
+      - .:/usr/src/app # any change to base folder should be reflected
+      - /usr/src/app/node_modules
+    command: npm run start:dev mailer # overrides CMD from dockerfile
