feat.(mailer): fix bugs on sending email

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-//FOR DEV USE THIS//
-
 RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
 RABBITMQ_USER=user
@@ -7,6 +5,7 @@ RABBITMQ_PASS=password
 RABBITMQ_HOST=rabbitmq:5672
 
 RABBITMQ_AUTH_QUEUE=auth_queue
+RABBITMQ_MAIL_QUEUE=mail_queue
 
 POSTGRES_HOST=aws-0-ap-southeast-1.pooler.supabase.com
 POSTGRES_USER=postgres.kffdubbqdaawfzffviqq
@@ -18,5 +17,12 @@ POSTGRES_URI=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:$
 
 PGADMIN_DEFAULT_EMAIL=chativo@root.com
 PGADMIN_DEFAULT_PASSWORD=password
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=wildannurrahman30@gmail.com
+SMTP_PASS=gumfrxsnxdqhyytn
+SMTP_FROM=wildannurrahman30@gmail.com
 
 JWT_SECRET=secret
