--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.13",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
